  * KDE Frontend:
    - Update timezone information when clicking on map
    - i18n various strings, closes Malone #43818
    - Allow line wrap on Reboot dialogue, closes Malone #43680
    - Fix cancel button on debconf progress dialogue from jumping position

  [ Colin Watson ]
  * Avoid starting cardmgr while running hw-detect.
  * Remove old partman state each time the installer is started.

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 15 May 2006 23:28:03 +0000

ubiquity (0.99.82) dapper; urgency=low

  * Really remove /usr/share/ubiquity/pixmaps/world_map-960.png from
    ubiquity-frontend-gtk.
  * Add basic clock-setup integration; there's no UI at present, but it will
    at least try to guess appropriate UTCness for the hardware clock based
    on what other operating systems you have installed.
  * Automatic update of included source packages: kbd-chooser
    1.23ubuntu17, localechooser 0.27ubuntu20, tzsetup 1:0.8ubuntu7,
    user-setup 1.1ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 15 May 2006 22:50:49 +0100

ubiquity (0.99.81) dapper; urgency=low

  [ Colin Watson ]
  * Work around PyGTK bug in gtk.Dialog(): each button text must actually be
    a subtype of str, which unicode isn't (closes: Malone #43012).
  * New, more descriptive icon (thanks, Antônio Cláudio; closes: Malone
    #41472).
  * Add .desktop file translations from Rosetta: German, Spanish, Finnish,
    French, Croatian, Hungarian, Italian, Korean, Kurdish, Polish,
    Portuguese.
  * Update translations from Rosetta: Belarusian, Frisian, Hungarian,
    Kurdish, Latvian, Thai, Turkish, Chinese (Taiwan).

  [ Jonathan Riddell ]
  * KDE frontend:
    - Show % indicator on resize slider
    - Improve size/layout of some widgets
    - Don't call get_translations multiple times (closes: Malone #44515)
    - Format time properly in non-latin locales
    - Make mountpoint comboboxes editable
    - Resize qtparted to fit window (closes: Malone #43122)
    - Quit qtparted cleanly